kubernetes/exemple-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  defaultBackend:
    service:
      name: web
      port:
        number: 80
  rules:
    - host: mag-host.info
      http:
        paths:
          - path: /v2
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 80
