kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mag-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: mag-host.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dep-service
                port:
                  number: 8090
